--- a/options.html
+++ b/options.html
@@ -13,8 +13,9 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
     align-items: center;
-    
-  };
+    color: #3F68A0;
+    background: #F5F9F9;
+  }
   .title {
     grid-row: 1/1;
     grid-column: 2/span 2;
@@ -32,6 +33,21 @@
     grid-row: 4/4;
     grid-column: 1/4;
   }
+  .btn {
+    padding: 5px;
+    color: #3F68A0;
+    background: #F5F9F9;
+    border: 2px solid #274A83;
+  }
+  .btn:hover {
+    background: #3F68A0;
+    color: #F5F9F9;
+  }
+  input {
+    color: #3F68A0;
+    background: #F5F9F9;
+    border: 2px solid #274A83;
+  }
 </style>
 
 <body>
@@ -42,20 +58,20 @@
     Add a website :
     <form action="">
       <input type="text" name="url">
-      <input type="radio" name="pin" value="pinned">Pin the tab
-      <button type="submit" id="saveUrl">Save</button>
+      <input type="checkbox" name="pin" value="pinned">Pin the tab
+      <button type="submit" id="saveUrl" class="btn">Save</button>
     </form>
   </div>
   <div class="removeSection">
     Your urls :
-    <a href="http://#">http://#ezdzedzedzedzedzed</a><button>X</button>
+    <button class="btn">X</button>
   </div>
   <h3 class="support">Want to support ?
-      <a href='https://ko-fi.com/L4L8AMS3' target='_blank'>
-        <img height='24' style='border:0px;height:24px;' src='https://az743702.vo.msecnd.net/cdn/kofi2.png?v=0' border='0' alt='Buy Me a Coffee at ko-fi.com'
-        />
-      </a>
-    </h3>
+    <a href='https://ko-fi.com/L4L8AMS3' target='_blank'>
+      <img height='24' style='border:0px;height:24px;' src='https://az743702.vo.msecnd.net/cdn/kofi2.png?v=0' border='0' alt='Buy Me a Coffee at ko-fi.com'
+      />
+    </a>
+  </h3>
   <script src="options.js"></script>
 </body>
 
