--- a/options.html
+++ b/options.html
@@ -8,14 +8,19 @@
   <title>Options</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <p class="title">Preferences</p>
+  <p class="title">Preferences</p>
   <div class="addSection">
-    Add a complete URL (exemple: "https://www.google.fr"):
-    <form action="">
-      <input type="text" name="url" class="urlTab" />
-      <input type="checkbox" name="pin" value="pinned">Pin the tab
-      <button type="submit" id="saveUrl" class="btn">Save</button>
+    <p class="formLabel">
+      Add a complete URL
+      <i>(example: "https://www.google.fr")</i>:
+    </p>
+    <form action="" class="formInput">
+      <input type="text" name="url" id="urlTab" />
+      <input id="pinned" type="checkbox" name="pin" value="pinned">Pin the tab
+      <button type="" id="saveUrl" class="btn">Save</button>
+      <div id="status"></div>
     </form>
   </div>
   <div class="removeSection">
@@ -32,3 +37,33 @@
 </body>
 
 </html>
+
+<!-- <!DOCTYPE html>
+<html>
+<head>
+  <title>My Test Extension Options</title>
+  <style>
+    body: { padding: 10px; }
+  </style>
+</head>
+
+<body>
+  Favorite color:
+  <select id="color">
+   <option value="red">red</option>
+   <option value="green">green</option>
+   <option value="blue">blue</option>
+   <option value="yellow">yellow</option>
+  </select>
+
+  <label>
+    <input type="checkbox" id="like">
+    I like colors.
+  </label>
+
+  <div id="status"></div>
+  <button id="save">Save</button>
+
+  <script src="options.js"></script>
+</body>
+</html> -->
