display saved tabs and possibility to scourgify them

--- a/options.html
+++ b/options.html
@@ -20,12 +20,13 @@
       <input type="text" name="url" id="urlTab" />
       <input id="pinned" type="checkbox" name="pin" value="pinned">Pin the tab
       <button type="" id="saveUrl" class="btn">Save</button>
-      <div id="status"></div>
+      <i id="status"></i>
     </form>
   </div>
-  <div class="removeSection">
+  <div class="urlSection">
+    <div id="urls">
+    </div>
     Your urls :
-    <button class="btn">X</button>
   </div>
   <p class="support">Want to support ?
     <a href='https://ko-fi.com/L4L8AMS3' target='_blank'>
